// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvoiceDetails should render correct structure for Approved invoice 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion21"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion21"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion22"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion22"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion23"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion23"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion24"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion24"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          VoucherInformation
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion25"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion25"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InvoiceDetails should render correct structure for Cancelled invoice 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion61"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion61"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion62"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion62"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion63"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion63"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion64"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion64"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          VoucherInformation
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion65"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion65"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InvoiceDetails should render correct structure for Open invoice 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion1"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion1"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion2"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion2"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion3"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion3"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion4"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion4"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion5"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion5"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InvoiceDetails should render correct structure for Paid invoice 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion41"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion41"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion42"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion42"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion43"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion43"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion44"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion44"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          VoucherInformation
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion45"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion45"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InvoiceDetails should render correct structure for Reviewed invoice 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion81"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion81"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion82"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion82"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion83"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion83"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion84"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion84"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion85"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion85"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`InvoiceDetails should render correct structure for invoice with batch voucher 1`] = `
<DocumentFragment>
  <div>
    <section
      class="pane focusIndicator"
      id="pane-invoiceDetails"
    >
      <div
        aria-labelledby="paneHeaderpane-invoiceDetails-pane-title"
        class="paneHeader"
        data-test-pane-header="true"
        id="paneHeaderpane-invoiceDetails"
        role="region"
        tabindex="-1"
      >
        <div
          class="paneHeaderButtonsArea first"
        >
          <div
            class="paneMenu"
          >
            <button
              aria-label="stripes-components.closeItem"
              class="iconButton medium paneHeaderCloseIcon PaneHeaderIconButton paneHeaderIconButton"
              data-test-pane-header-dismiss-button="true"
              icon="times"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset PaneHeaderIconButton__inner"
                data-test-pane-header-dismiss-button="true"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="paneHeaderCenter"
        >
          <div
            class="paneHeaderCenterInner"
            id="paneHeaderpane-invoiceDetails-pane-title"
          >
            <h2
              class="paneTitle"
              data-test-pane-header-title="true"
            >
              <span
                class="paneTitleLabel"
              >
                ui-invoice.invoice.details.paneTitle
              </span>
            </h2>
          </div>
        </div>
        <div
          class="paneHeaderButtonsArea last"
        >
          <div
            class="paneMenu"
          >
            <div
              class="dropdown"
              data-pane-header-actions-dropdown="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="button primary marginBottom0 actionMenuToggle"
                data-test-pane-header-actions-button="true"
                type="button"
              >
                <span
                  class="inner"
                >
                  <span>
                    Icon
                  </span>
                </span>
              </button>
              <div
                style="display: none;"
              >
                <div
                  class="DropdownMenu"
                  style="left: 0px; display: block;"
                >
                  InvoiceActions
                </div>
              </div>
            </div>
            <div
              class="paneMenu"
            >
              <button
                aria-label="stripes-acq-components.showTags"
                class="iconButton hasBadge medium"
                data-test-invoice-line-tags-action="true"
                icon="tag"
                id="clickable-show-tags"
                title="stripes-acq-components.showTags"
                type="button"
              >
                <span
                  class="iconButtonInner mediumOffset"
                  data-test-invoice-line-tags-action="true"
                  title="stripes-acq-components.showTags"
                >
                  <span>
                    Icon
                  </span>
                  <span
                    class="badge default medium"
                  >
                    <span
                      class="label"
                    >
                      0
                    </span>
                  </span>
                </span>
              </button>
            </div>
            <button
              aria-label="clock"
              aria-labelledby="version-history-tooltip-text"
              class="iconButton medium"
              icon="clock"
              id="version-history-btn"
              type="button"
            >
              <span
                class="iconButtonInner mediumOffset"
              >
                <span>
                  Icon
                </span>
              </span>
            </button>
            <span
              class="sr-only"
              data-test-tooltip-proximity-element="true"
            >
              <span
                id="version-history-tooltip-text"
                role="tooltip"
              >
                stripes-acq-components.versionHistory.pane.header
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="paneContent hasPadding"
        id="pane-invoiceDetails-content"
        tabindex="-1"
      >
        <div>
          TitleManager
        </div>
        <div
          class="row end-xs"
        >
          <div
            class="col-xs-10"
          />
          <div
            class="col-xs-2"
          >
            <button
              class="button link bottomMargin0"
              data-test-expand-button="true"
              type="button"
            >
              <span
                class="inner"
              >
                <strong>
                  stripes-components.collapseAll
                </strong>
              </span>
            </button>
          </div>
        </div>
        <div
          id="invoice-details-accordion-set"
        >
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="information"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion101"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-information"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.information.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 0;"
            >
              <div
                aria-labelledby="accordion-toggle-button-information"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion101"
                role="region"
              >
                Information
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="invoiceLines"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion102"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-invoiceLines"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.lines.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                  <div
                    class="headerDefaultContentRight"
                  >
                    InvoiceLinesActions
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 1;"
            >
              <div
                aria-labelledby="accordion-toggle-button-invoiceLines"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion102"
                role="region"
              >
                InvoiceLines
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="vendorDetails"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion103"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-vendorDetails"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.vendor.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 2;"
            >
              <div
                aria-labelledby="accordion-toggle-button-vendorDetails"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion103"
                role="region"
              >
                VendorDetails
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="extendedInformation"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion104"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-extendedInformation"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.extendedInformation
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 3;"
            >
              <div
                aria-labelledby="accordion-toggle-button-extendedInformation"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion104"
                role="region"
              >
                ExtendedInformation
              </div>
            </div>
          </section>
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="batchVoucherExport"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion105"
                        aria-expanded="true"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-batchVoucherExport"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.invoice.details.batchVoucherExport.title
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap expanded"
              style="z-index: 4;"
            >
              <div
                aria-labelledby="accordion-toggle-button-batchVoucherExport"
                class="content-region expanded"
                data-test-accordion-wrapper="true"
                id="accordion105"
                role="region"
              >
                InvoiceBatchVoucherExport
              </div>
            </div>
          </section>
          VoucherInformation
          <section
            class="accordion hasSeparator"
            data-test-accordion-section="true"
            id="documents"
          >
            <div>
              <div
                style="width: 100%; display: flex;"
              >
                <div
                  class="headerWrapper"
                >
                  <div
                    class="header default"
                  >
                    <h3
                      class="headline size-medium margin-none font-weight-bold block"
                      data-test-headline="true"
                    >
                      <button
                        aria-controls="accordion106"
                        aria-expanded="false"
                        class="defaultCollapseButton"
                        id="accordion-toggle-button-documents"
                        type="button"
                      >
                        <span
                          class="headerInner"
                        >
                          <span
                            class="defaultHeaderIcon"
                          >
                            <span>
                              Icon
                            </span>
                          </span>
                          <div
                            class="labelArea"
                          >
                            ui-invoice.linksAndDocuments
                          </div>
                        </span>
                      </button>
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="content-wrap"
              style="z-index: 5;"
            >
              <div
                aria-labelledby="accordion-toggle-button-documents"
                class="content-region"
                data-test-accordion-wrapper="true"
                id="accordion106"
                role="region"
              >
                DocumentsDetails
              </div>
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
